--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -27,10 +27,12 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="home_text">首页</string>
+    <string name="home_text">怎么玩</string>
     <string name="banmi_text">伴米</string>
     <string name="get_verify_faild">获取验证码失败</string>
     <string name="get_verify_code">验证码：</string>
     <string name="string_create">打开相机</string>
     <string name="string_picture">打开相册</string>
+    <string name="discover_text">发现</string>
+    <string name="me_text">我的</string>
 </resources>
